make age input numeric for easy mobile use

--- a/index-old.html
+++ b/index-old.html
@@ -49,15 +49,15 @@
                     <div class="form-row">
                         <div class="form-group col-sm-12 col-md-3">
                             <label for="form_dob_day">Ziua:</label>
-                            <input type="text" class="form-control" name="form_dob_day" id="form_dob_day" required>
+                            <input type="numeric" class="form-control" name="form_dob_day" id="form_dob_day" required>
                         </div>
                         <div class="form-group col-sm-12 col-md-5">
                             <label for="form_dob_month">Luna:</label>
-                            <input type="text" class="form-control" name="form_dob_month" id="form_dob_month" required>
+                            <input type="numeric" class="form-control" name="form_dob_month" id="form_dob_month" required>
                         </div>
                         <div class="form-group col-sm-12 col-md-4">
                             <label for="form_dob_year">Anul:</label>
-                            <input type="text" class="form-control" name="form_dob_year" id="form_dob_year" required>
+                            <input type="numeric" class="form-control" name="form_dob_year" id="form_dob_year" required>
                         </div>
                     </div>
 
