adding more time before redirect, allow visitor to choose my implementation

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="robots" content="index, follow">
    <!-- HTML meta refresh URL redirection -->
-   <meta http-equiv="refresh" content="0; url=https://formular.sts.ro/">
+   <meta http-equiv="refresh" content="10; url=https://formular.sts.ro/">
 </head>
 <body>
    <p>Singurul formular agreat de institutiile statului Roman il gasiti la:
-   <a href="https://formular.sts.ro/"></a><br>
-    Veți fi redirecționat către această pagină.</p>
+   <a href="https://formular.sts.ro/">formular.sts.ro</a><br>
+    Veți fi redirecționat către această pagină in 10 secunde.</p>
+    <p>Implementarea mea o găsiți in <a href="new.html">această pagină</a></p>
 </body>
 </html>
